# workshop_rosconfr_2025

./: LICENSE  README.md
workshop_robot_description/: CMakeLists.txt  package.xml
workshop_robot_description/launch/: display.launch.py
workshop_robot_description/rviz/: view_robot.rviz
workshop_robot_description/urdf/: ur.ros2_control.xacro  ur10e_with_cube.urdf.xacro
workshop_robot_moveit_config/: CMakeLists.txt  package.xml
workshop_robot_moveit_config/config/: moveit_controllers.yaml  ur_controllers.yaml
workshop_robot_moveit_config/launch/: robot_rsp.launch.py  workshop_control.launch.py  workshop_moveit.launch.py
