<?xml version="1.0"?>
<package format="3">
  <name>workshop_robot_description</name>
  <version>1.0.0</version>
  <description>URDF/Xacro description for ROSCON Fr Workshop</description>
  <maintainer email="ludovic.delval@irt-jules-verne.fr">Ludovic DELVAL</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <build_depend>xacro</build_depend>
  <exec_depend>xacro</exec_depend>

  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>ur_description</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
